fixed alignment.

--- a/DreamTech/HTML/Dogbible/css/style.css
+++ b/DreamTech/HTML/Dogbible/css/style.css
@@ -862,6 +862,7 @@ ul li{
     right: 0px;
     top: 133px;
     width: 500px;
+    padding-right: 0;
 }
 .toprow-col2_content h3{
     color: var(--para-color);
@@ -887,8 +888,9 @@ ul li{
     align-items: center;
     display: flex;
     justify-content: center;
-    margin: 3rem 0;
-    width: 80%;
+    margin: 3rem;
+    width: 77%;
+    margin-right: 0;
 }
 .magazine-bottomrow .magazine-box{
     align-items: center;
@@ -928,7 +930,7 @@ ul li{
     padding: 1rem 1rem 1rem 1.8rem;
     position: absolute;
     transition: 0.3s;
-    width: 250px;
+    width: 245px;
 }
 .magazine-box_content h4{
     color: var(--para-color);
@@ -940,8 +942,8 @@ ul li{
     color: var(--heading-color);
     font-size: 1.4rem;
     line-height: 1.4;
-    margin-bottom: 1rem;
     margin: 0;
+    margin-bottom: 1rem;
     transition: 0.3s;
 }
 .magazine-row3 .viewmore{
